Preprocessing (#6)
* Init the plugin. add common parts for tests and runners

* Fix ktlint

* Create build.yaml

* Add python sdk (#3)

* Add Python SDK configurer and test with Python SDK

* Update versions

* Update build.yaml

* Fix tests: add an ability to process folders in the test data

* added preprocessings without tests

* ran ktlint fix

* replaced println with log

* fixed Android Sdk preprocessing: now it uses Properties and can modify existing local.properties files + some cosmetic changes

* replaces local.properties and sdk.dir strings with constants

* CliTask -> IOCliTask

* LOG -> logger

* AndroidSdkPreprocessing no longer adds local.properties to Maven projects + DeleteDirectoriesPreprocessing

* Added GradleKotlinDsl and a PreprocessJava runner

* renamed removeIdeaDirectories to removeDirectories

* moved some classes and abstracted DeleteDirectoriesPreprocessor into DeleteFilesPreprocessor

* moved some classes into core

* fixed ktlint

* removed CliRunner.kt that was there because of incorrect conflict resolution

* fixed DeleteFilesPreprocessor.kt for non-empty directories

* Added instructions about running preprocessing

* fixed Logging and copying in PreprocessorManager.kt

Co-authored-by: Anastasiia.Birillo <nbirillo@mail.ru>
Co-authored-by: Nastya Birillo <anastasia.i.birillo@gmail.com>